<resources>
    <string name="app_name">喷码易-菲司达</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="jump">前往</string>
    <string name="jumpp">跳转</string>
    <string name="warn">警告</string>
    <string name="tip">提示</string>
    <string name="delete">删除</string>
    <string name="deleting">正在删除...</string>
    <string name="switches">切换</string>
    <string name="ended">已完成</string>
    <string name="next_step">下一步</string>
    <string name="abort_task">停止喷码</string>
    <string name="next_task">下一个任务</string>
    <string name="no_more_tip">不再提示</string>
    <string name="logging">正在登录...</string>
    <string name="connecting">正在连接...</string>
    <string name="loading">正在加载...</string>
    <string name="jumping">正在跳转...</string>
    <string name="switching">正在切换...</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="main_page_des">拼搏实干，敢为人先，抓住机遇，迎接挑战\n和谐发展，创造辉煌</string>
    <string name="excel_code">Excel喷码</string>
    <string name="manual_code">手输喷码</string>
    <string name="code_record">喷码记录</string>
    <string name="setting">个人设置</string>
    <string name="device_setting">喷码设置</string>
    <string name="input_company_code">请输入企业注册码</string>
    <string name="login">登录</string>
    <string name="activate_use">激活使用</string>
    <string name="open_with_other_apps">使用其他应用查看</string>
    <string name="retry">重试</string>
    <string name="account">账号</string>
    <string name="account_hint">手机号、用户名</string>
    <string name="password">密码</string>
    <string name="create_date">创建日期</string>
    <string name="project_name">项目名称</string>
    <string name="password_hint">请输入登陆密码</string>
    <string name="input_account">请输入企业注册码</string>
    <string name="input_password">请输入企业注册码</string>
    <string name="data_list">数据列表</string>
    <string name="excel_data_collection">Excel数据采集</string>
    <string name="upload_attachment">上传文件</string>
    <string name="upload_attachment_des">上传Excel文件\n选择对应的表生成项目数据</string>
    <string name="next">下一步</string>
    <string name="display_excel_failed">文件预览器未准备好或打开文件失败</string>
    <string name="check_file">查看文件</string>
    <string name="check_file_failed">查看文件失败~</string>
    <string name="check_file_not_upload">请先上传文件~</string>
    <string name="check_file_no_data">暂无数据，请先上传文件~</string>
    <string name="fetch_data_failed">获取数据失败，请重新尝试上传文件~</string>
    <string name="file_path">文件路径</string>
    <string name="select_sheet">请选择Excel表</string>
    <string name="open_file_failed">打开文件失败~</string>
    <string name="dialog_tips">提示</string>
    <string name="permission_rationale_tips">您已拒绝我们权限申请，请同意授权，否则该功能无法正常使用！</string>
    <string name="permission_forever_denied_tips">我们需要您拒绝的或者系统无法应用的权限，否则该功能无法正常使用，是否跳转到设置页面进行设置？</string>
    <string name="permission_forever_denied_tips_for_ink">未授权位置权限：在进行喷码的时候，我们需要记录您的当前位置并上传到云端，否则喷码位置无法正常记录，是否跳转到设置页面进行设置？</string>
    <string name="rejected_permission_tip">您尚未授予权限，因此该功能不可用</string>
    <string name="rejected_permission_tip_for_ink">拒绝授予位置权限将导致喷码时无法记录使用位置</string>
    <string name="wrong_fetch_file_tips">请选择一个Excel文件，即后缀为".xls"或者".xlsx"的文件~</string>
    <string name="file_not_exists">文件不存在，请重新上传~</string>
    <string name="no_sheets">文件内容为空，请重新选择~</string>
    <string name="parse_excel_failed">获取Excel文件失败，请重试~</string>
    <string name="current_sheet">当前Excel表：</string>
    <string name="select_column">请选择需要的列：</string>
    <string name="select_row">请输入需要的行数范围: </string>
    <string name="begin_row">开始行数</string>
    <string name="end_row">结束行数</string>
    <string name="open_excel_file">查看Excel文件</string>
    <string name="generating">正在生成数据...</string>
    <string name="generate_data">生成数据</string>
    <string name="empty_sheet">该Excel表为空~</string>
    <string name="sheet_no_available_data">该Excel表无可用数据</string>
    <string name="generate_data_failed">生成数据失败~</string>
    <string name="plz_select_col">请点击选择需要的列~</string>
    <string name="plz_input_begin_row">请输入开始行数~</string>
    <string name="plz_input_end_row">请输入结束行数~</string>
    <string name="plz_input_less_1_row">请输入大于等于1的开始行数~</string>
    <string name="end_can_not_less_than_begin">结束行数不能小于开始行数~</string>
    <string name="plz_input_less_most_row">请输入小于等于%1$d的结束行数~</string>
    <string name="all">全部</string>
    <string name="select_all">全选</string>
    <string name="not_select_all">全不选</string>
    <string name="sprayed_content">已喷码</string>
    <string name="not_sprayed_content">未喷码</string>
    <string name="previous_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="input_valid_account">请输入正确的账号~</string>
    <string name="input_valid_psw">请输入正确的密码~</string>
    <string name="no_net">网络不可用，请检查网络设置！</string>
    <string name="no_net_connect">无网络连接</string>
    <string name="load_failed">加载失败</string>
    <string name="get_annal_failed">获取记录失败~</string>
    <string name="input_16bit_company_code">请输入企业编码~</string>
    <string name="verifying">正在验证...</string>
    <string name="login_failed">登录失败，请尝试重新登录~</string>
    <string name="no_previous_page">没有上一页啦~</string>
    <string name="no_next_page">没有下一页啦~</string>
    <string name="no_annal">无记录~</string>
    <string name="print_content">喷码内容</string>
    <string name="bluetooth_not_available">蓝牙不可用~</string>
    <string name="bluetooth">蓝牙</string>
    <string name="unknown_device">未知设备</string>
    <string name="no_paired_device">无配对设备</string>
    <string name="no_available_device">无可用设备</string>
    <string name="search_bt_devices">搜索蓝牙设备</string>
    <string name="stop_searching">正在搜索蓝牙(点击停止)</string>
    <string name="need_enable_blue_tooth">需要连接蓝牙才能使用喷码设备，请开启蓝牙功能</string>
    <string name="select_bt">请点击已配对的设备或可用设备进行喷码设备连接</string>
    <string name="disconnect_device_tip">是否断开连接？</string>
    <string name="print">喷码</string>
    <string name="begin_print">开始喷码</string>
    <string name="print_settings">喷码设置</string>
    <string name="connect_device">连接设备(未连接)</string>
    <string name="refer_print_device_settings">点击查看配置说明</string>
    <string name="send_msg_format">发送通知格式：</string>
    <string name="end_character">结束字符：</string>
    <string name="ascii">ASCII码</string>
    <string name="input_valid_ascii">请输入正确的ASCII码值(0-127)~</string>
    <string name="set_success">设置成功</string>
    <string name="set_failed">设置失败</string>
    <string name="print_setting_description">结束字符：喷码机在接收数据过程中检测到该字符后，立即停止接收数据，结束字符默认为 ASCII 代码 13 即回车\n\n喷码机端创建的项目的端口子项目默认没有反馈内容，请在喷码机端项目的通讯端口配置反馈内容：\n\n喷码开始时：该参数控制喷码机启动喷码模式后（按下）反馈的内容，反馈内容自定义；\n\n数据处理时：该参数控制喷码机喷完传输的内容后反馈回来的内容，反馈内容自定义；\n\n喷码结束时：该参数控制喷码机在退出喷码模式后反馈的内容，反馈内容自定义；</string>
    <string name="print_start">喷码开始时：</string>
    <string name="print_finished">数据处理时：</string>
    <string name="print_stop">喷码结束时：</string>
    <string name="print_count">喷码次数</string>
    <string name="operate">操作</string>
    <string name="start_print_des">喷码机启动喷码模式~</string>
    <string name="finish_print_des">喷码机喷完传输内容~</string>
    <string name="stop_print_des">喷码机退出喷码模式~</string>
    <string name="print_code">喷码</string>
    <string name="have_transfer">已传输</string>
    <string name="print_state_waiting">等待喷码</string>
    <string name="print_state_printing">正在喷码</string>
    <string name="print_state_finish">喷码完毕</string>
    <string name="print_state_failed">喷码失败</string>
    <string name="print_hint">请输入喷码内容</string>
    <string name="input_print_content">喷码内容不能为空~</string>
    <string name="no_available_excel_data">无可用Excel数据~</string>
    <string name="finish_print">喷码任务已完成，是否重新喷码？</string>
    <string name="printing">正在进行喷码：%1$s</string>
    <string name="swipe_to_see_more_tasks">滑动以看到更多任务</string>
    <string name="next_task_tip">是否中断当前喷码任务执行下一个喷码任务？</string>
    <string name="abort_task_tip">是否停止喷码？</string>
    <string name="current_task">当前喷码：任务%1$d</string>
    <string name="finish_task_tip">是否完成喷码？</string>
    <string name="check_company_code_failed">企业验证失败，请重新尝试~</string>
    <string name="change_psw">修改密码</string>
    <string name="version_info">版本信息</string>
    <string name="exit">退出登陆</string>
    <string name="re_input_company_code">切换企业</string>
    <string name="logout_or_not">是否退出登录？</string>
    <string name="verify_company_code_or_not">是否重新验证企业编码？</string>
    <string name="old_psw">*旧密码: </string>
    <string name="new_psw">*新密码: </string>
    <string name="confirm_new_psw">*确认新密码: </string>
    <string name="save">保存</string>
    <string name="change_psw_failed">密码修改失败，请重新尝试~</string>
    <string name="saving">正在保存...</string>
    <string name="input_old_psw">请输入旧密码~</string>
    <string name="input_new_psw">请输入新密码~</string>
    <string name="input_confirm_new_psw">请再次输入新密码~</string>
    <string name="not_equal_new_psw">两次输入的密码不一致~</string>
    <string name="load_more_failed">加载失败, 点击重试</string>
    <string name="no_more_data">木有数据了</string>
    <string name="navigation">导航</string>
    <string name="open_map_failed">打开地图失败~</string>
    <string name="no_map">尚未安装%1$s，是否打开手机浏览器进行导航？</string>
    <string name="not_support_device_tip">您连接的喷码机未在服务端注册，请联系商务人员</string>
    <string name="get_print_list_failed">获取喷码列表失败，请重新上传Excel数据~</string>
    <string name="get_print_list_empty">喷码列表为空，请重新上传Excel数据~</string>
    <string name="split_effect">喷印效果：</string>
    <string name="select_split">喷印行数：</string>
    <string name="split_col">第%1$d行</string>
    <string name="split_col_range">请选择(1-10)</string>
    <string name="split_col_default">默认为1</string>
    <string name="set_split_col_failed">设置失败~</string>
    <string name="input_split_empty">请输入1-10的行数~</string>
    <string name="select_split_warn">请选择行数内容~</string>
    <string name="print_col">第%1$d行：</string>
    <string name="no_connected_bt_device">未连接到任何蓝牙设备</string>
    <string name="pieces_number">件数</string>
    <string name="content">内容</string>
    <string name="must_select_content">内容列必须选中~</string>
    <string name="must_select_pieces_column">件数列必须选中~</string>
    <string name="excel_must_include_pieces_column">Excel表中必须要包含件数列~</string>
    <string name="verify_company_code_or_not_not_login">是否重新验证企业编码？</string>
    <string name="line_number">行号</string>
    <string name="line_numberr">行数</string>
    <string name="line_number_with_col">行数: </string>
    <string name="jump_failed">跳转失败</string>
    <string name="no_jump_data">无数据~</string>
    <string name="jump_less_than">跳转行数不能小于最小行数~</string>
    <string name="jump_more_than">跳转行数不能大于最大行数~</string>
    <string name="no_corresponding_data">无对应数据</string>
    <string name="input_jump_row">请输入跳转行数</string>
    <string name="exists_project">该Excel表数据已存在，是否删除重新生成？</string>
    <string name="no_variable_data">无可用数据，请重新尝试上传文件~</string>
    <string name="no_print_data">无可喷印数据~</string>
    <string name="current_project">当前项目：%1$s</string>
    <string name="no_project_data">暂无项目数据，请先上传文件~</string>
    <string name="no_project_data_d">无项目数据</string>
    <string name="getting_project">正在获取项目信息...</string>
    <string name="project_list">项目列表</string>
    <string name="no_row_number">无对应行数~</string>
    <string name="get_row_index_failed">跳转失败，请重试~</string>
    <string name="project_manager">项目管理</string>
    <string name="no_project">无项目数据</string>
    <string name="delete_success">删除成功~</string>
    <string name="delete_failed_retry">删除失败，请重新尝试~</string>
    <string name="no_delete_project">未选中删除项~</string>
    <string name="project_delete_tip">长按条目可以进入删除模式</string>
    <string name="delete_tip">确定要删除吗？</string>
    <string name="search">搜索</string>
    <string name="print_search_hint">请输入要搜索的内容</string>
    <string name="input_search_content">搜索内容不能为空~</string>
    <string name="searching">正在搜索...</string>
    <string name="qr_bar_code">二维码/条码</string>
    <string name="open_camera_failed">打开相机出错~</string>
    <string name="reject_camera_permission">您已拒绝摄像头权限申请，请同意授权，否则无法扫描二维码！</string>
    <string name="rejected_camera_permission_tip">您尚未授予摄像头权限，无法扫描二维码！</string>
</resources>